@@ -1,5 +1,10 @@
 2012-05-20 Philipp Klaus Krause <pkk AT spth.de>
 
+	* sdccconf_in.h:
+	  Regenerated, so buildings with r3ka port disabled now works.
+
+2012-05-20 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/hc08/gen.c:
 	  Improved code for PCALL.
 
